# fake-llm

./: .gitignore  LICENSE  README.ja.md  README.md  cli.sh  pyproject.toml  run.sh
docs/: system-prompt-patterns.md
docs/history/: 2026-06-08.md
src/fake_llm/: __init__.py  __main__.py  api.py  bot.py  cli.py
src/fake_llm/data/: pattern.tsv  random.txt  template.tsv
tests/: test_api.py  test_bot.py  test_cli.py
