[project]
name = "fake-llm"
version = "0.1.0"
description = "A tiny MIT-licensed fake LLM for local testing."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "fake-llm contributors" }
]
dependencies = []

[project.scripts]
fake-llm = "fake_llm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fake_llm"]
